(1)SpringBoot升级到4.0.1,fix相关依赖；(2)添加swagger接口文档；(3)优化crawler模块单测；